refactor: Apply Java 17 standards and enhance error handling
Backend Java 17 improvements:
- Replace Collectors.toList() with Stream.toList() (8 occurrences)
- Convert switch statements to switch expressions (3 files)
- Apply pattern matching for instanceof
- Remove unused Collectors imports

Error handling enhancements:
- Add BusinessException and RateLimitException handlers to GlobalExceptionHandler
- Add userMessage field to all backend error responses
- Enhance BusTrackingController with validation and error handling
- Frontend now extracts and displays userMessage from backend
- Add rate-limit, duplicate, and timeout error UI in ErrorDisplay

Pre-push hook:
- Add pre-push hook to run build and tests before pushing
- Prevents breaking CI/CD pipeline